fix: using border to understand the reason search result on mobile devices is not working

--- a/src/features/nav/mobile/styles.module.css
+++ b/src/features/nav/mobile/styles.module.css
@@ -189,6 +189,7 @@
 .ul{
   height: 70vh;
   overflow-y: auto;
+  border: 1px solid silver;
 }
 
 .displayNtcMsg{
